# register_tool

./: .gitignore  .gitmodules  Cargo.toml  README.md  register_tool.yaml
.github/workflows/: build_and_test.yml
data/: raspberrypi4b.yaml
docker/: .gitignore  Dockerfile  ubuntu.sources
examples/: raspberrypi4b.yaml  raspberrypi4b_remap.yaml  raspberrypi4b_source.yaml  register_tool_comp.zsh
python/: README.md  license_annotator.py  raspberrypi4b.jinja2  renderings.py  rpi4b_preamble.txt  rpi4b_renderings.py
src/: lib.rs  main.rs  register.rs  register_op.rs  register_tool.rs  rtoolconfig.rs  unittests.rs  unsafes.rs
tools/: README.md  register_config_validator.py  unittests.py
tools/data/: testconfig.yaml
